--- a/plugins/admin/app/css/containers.css
+++ b/plugins/admin/app/css/containers.css
@@ -2,6 +2,16 @@
   padding: 10px;
   margin: 0;
 }
+.application.no-padding {
+  padding: 0;
+  margin: 0;
+}
+
+.article {
+  padding: 10px;
+  margin: 10px;
+  margin-bottom: 0;
+}
 
 .content {
   background: #ffffff;
