--- a/plugins/admin/app/css/main.css
+++ b/plugins/admin/app/css/main.css
@@ -1,5 +1,4 @@
 * {
-  font-family: 'Lato', sans-serif;
   box-sizing: border-box;
 }
 
@@ -13,12 +12,15 @@ html, body, #root {
 }
 
 h1, h2, h3, h4, h5, h6, p, blockquote {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 16px;
   padding: 0;
   margin: 0;
   padding-top: 5px;
   padding-bottom: 5px;
-  font-size: 16px;
-  line-height: 16px;
   display: block;
   transition: all 0.3s ease;
 }
@@ -41,16 +43,18 @@ a.card:hover {
 h2 {
   font-size: 28px;
   line-height: 28px;
+  font-weight: 800;
+  text-transform: uppercase;
 }
 h4 {
+  font-size: 22px;
+  line-height: 22px;
+  font-weight: 300;
+}
+p {
   font-size: 20px;
   line-height: 20px;
-  font-weight: normal;
-}
-h6 {
-  font-size: 14px;
-  line-height: 14px;
-  font-weight: normal;
+  font-weight: 200;
 }
 
 div {
@@ -65,6 +69,8 @@ div {
 }
 
 @import './loaders.css';
+@import './sidenav.css';
+@import './appbar.css';
 @import './containers.css';
 @import './forms.css';
 @import './colors.css';
