--- a/plugins/admin/app/css/buttons.css
+++ b/plugins/admin/app/css/buttons.css
@@ -1,10 +1,12 @@
 .button {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 400;
   margin: 0;
   padding: 10px;
   text-decoration: none;
   display: inline-block;
   border-radius: 5px;
-  font-weight: bold;
   cursor: pointer;
   position: relative;
   text-align: center;
@@ -57,7 +59,6 @@
   position: fixed;
   right: 10px;
   top: 10px;
-  z-index: 999;
 }
 .button.large {
   font-size: 24px;
