--- a/plugins/admin/app/css/main.css
+++ b/plugins/admin/app/css/main.css
@@ -46,6 +46,11 @@ h2 {
   font-weight: 800;
   text-transform: uppercase;
 }
+h3 {
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 800;
+}
 h4 {
   font-size: 22px;
   line-height: 22px;
