--- a/plugins/admin/app/css/sidenav.css
+++ b/plugins/admin/app/css/sidenav.css
@@ -3,7 +3,6 @@
   height: calc(100% - 120px);
   width: 300px;
   position: fixed;
-  z-index: 100;
   top: 0;
   left: 0;
   background-color: #ffffff;
@@ -96,7 +95,7 @@
   cursor: pointer;
   position: absolute;
   display: inline;
-  top: 0;
+  top: -10px;
   right: 0;
   font-size: 36px;
 }
@@ -104,7 +103,7 @@
   cursor: pointer;
   display: none;
   position: absolute;
-  bottom: 0;
+  bottom: -10px;
   right: -10px;
   font-size: 36px;
 }
