--- a/plugins/admin/src/css/forms.css
+++ b/plugins/admin/src/css/forms.css
@@ -8,7 +8,9 @@ input[type=text].border {
   padding: 8px;
   font-size: 16px;
   line-height: 16px;
-  font-weight: normal;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 400;
   width: 100%
 }
 input[type=text].border:hover, textarea.border:hover {
@@ -46,10 +48,22 @@ textarea.border {
   border-radius: 5px;
 }
 .form-field > label {
-  display: block;
-  font-weight: bold;
+  display: inline;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 300;
   font-size: 18px;
   margin-bottom: 10px;
+}
+.form-field > label > span.required {
+  display: inline;
+  color: #c64e4e;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  margin: 0;
+  margin-left: 5px;
 }
 
 @media screen and (max-width: 640px) {
