--- a/themes/default/templates/youtube.html
+++ b/themes/default/templates/youtube.html
@@ -1,5 +1,4 @@
-<div class="video-player">
-  <div v-if="videoId" class="videoWrapper">
-     <iframe :width="width" :height="height" :src="'//www.youtube.com/embed/' + videoId + '?' + qs" frameborder="0" allowfullscreen></iframe>
-  </div>
+<div v-if="videoId" class="jumbotron">
+  <h1>{{ title }}</h1>
+  <iframe :width="width" :height="height" :src="'//www.youtube.com/embed/' + videoId + '?' + qs" frameborder="0" allowfullscreen></iframe>
 </div>
